# Haven-fork

./: .gitignore  CHANGELOG.md  EMAIL.md  PRIVACY_POLICY.md  README.md  RELEASE.md  ROADMAP.md  VISION.md  settings.gradle.kts
.github/actions/setup-toolchain/: action.yml
.github/workflows/: ci.yml  extract-secrets.yml  release.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-ar/: strings.xml
app/src/main/res/values-bn/: strings.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-hi/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-ko/: strings.xml
app/src/main/res/values-pt/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-zh/: strings.xml
build-ffmpeg/: build.sh
core/btserial/: build.gradle.kts
core/data/: build.gradle.kts
core/data/schemas/sh.haven.core.data.db.HavenDatabase/: 49.json  58.json  60.json  64.json  67.json  69.json  72.json  78.json  79.json
core/fido/: build.gradle.kts
core/local/: build-haven-usb.sh  build.gradle.kts
core/local/src/main/cpp/haven-usb/: haven-usb-probe.c
core/spa/: build.gradle.kts
core/ssh/: build.gradle.kts
core/toolbar/src/main/res/values/: strings.xml
core/tunnel/: build.gradle.kts
core/usbserial/: build.gradle.kts
docs/: FEATURES.md  mcp-tools.md
docs/ar/: index.md
docs/bn/: index.md
docs/de/: index.md
docs/design/: bridges.md
docs/es/: index.md
docs/features/: automation.md  usb-drives.md  usb.md
docs/fr/: index.md
docs/hi/: index.md
docs/i18n/: strings.json
docs/ja/: index.md
docs/ko/: index.md
docs/plans/: floating-text-input.md
docs/pt/: index.md
docs/ru/: index.md
docs/zh/: index.md
fastlane/metadata/android/en-US/changelogs/: 3821.txt  4131.txt  4161.txt  4191.txt  4361.txt  4381.txt  4471.txt  4501.txt  4691.txt  4761.txt  4771.txt  4801.txt  4841.txt  4861.txt  4891.txt  4931.txt  5101.txt  5171.txt  5191.txt  5211.txt  5221.txt  5291.txt  5311.txt  5441.txt  5481.txt  5521.txt  5551.txt  5561.txt  5581.txt  5671.txt  5841.txt  5881.txt  5891.txt  5911.txt  5991.txt  6071.txt  6141.txt  6171.txt  6181.txt  6201.txt  (+11 more)
feature/connections/: build.gradle.kts
feature/connections/src/main/res/values/: strings.xml
feature/connections/src/main/res/values-ar/: strings.xml
feature/connections/src/main/res/values-bn/: strings.xml
feature/connections/src/main/res/values-de/: strings.xml
feature/connections/src/main/res/values-es/: strings.xml
feature/connections/src/main/res/values-fr/: strings.xml
feature/connections/src/main/res/values-hi/: strings.xml
feature/connections/src/main/res/values-ja/: strings.xml
feature/connections/src/main/res/values-ko/: strings.xml
feature/connections/src/main/res/values-pt/: strings.xml
feature/connections/src/main/res/values-ru/: strings.xml
feature/connections/src/main/res/values-zh/: strings.xml
feature/editor/: build.gradle.kts
feature/keys/src/main/res/values/: strings.xml
feature/keys/src/main/res/values-ar/: strings.xml
feature/keys/src/main/res/values-bn/: strings.xml
feature/keys/src/main/res/values-de/: strings.xml
feature/keys/src/main/res/values-es/: strings.xml
feature/keys/src/main/res/values-fr/: strings.xml
feature/keys/src/main/res/values-hi/: strings.xml
feature/keys/src/main/res/values-ja/: strings.xml
feature/keys/src/main/res/values-ko/: strings.xml
feature/keys/src/main/res/values-pt/: strings.xml
feature/keys/src/main/res/values-ru/: strings.xml
feature/keys/src/main/res/values-zh/: strings.xml
feature/mail/src/main/res/values-ar/: strings.xml
feature/mail/src/main/res/values-ko/: strings.xml
feature/mail/src/main/res/values-pt/: strings.xml
feature/mail/src/main/res/values-zh/: strings.xml
feature/rdp/src/main/res/values-ar/: strings.xml
feature/rdp/src/main/res/values-bn/: strings.xml
feature/rdp/src/main/res/values-de/: strings.xml
feature/rdp/src/main/res/values-es/: strings.xml
feature/rdp/src/main/res/values-fr/: strings.xml
feature/rdp/src/main/res/values-hi/: strings.xml
feature/rdp/src/main/res/values-ja/: strings.xml
feature/rdp/src/main/res/values-ko/: strings.xml
feature/rdp/src/main/res/values-pt/: strings.xml
feature/rdp/src/main/res/values-ru/: strings.xml
feature/rdp/src/main/res/values-zh/: strings.xml
feature/settings/src/main/res/values/: strings.xml
feature/settings/src/main/res/values-ar/: strings.xml
feature/settings/src/main/res/values-bn/: strings.xml
feature/settings/src/main/res/values-de/: strings.xml
feature/settings/src/main/res/values-es/: strings.xml
feature/settings/src/main/res/values-fr/: strings.xml
feature/settings/src/main/res/values-hi/: strings.xml
feature/settings/src/main/res/values-ja/: strings.xml
feature/settings/src/main/res/values-ko/: strings.xml
feature/settings/src/main/res/values-pt/: strings.xml
feature/settings/src/main/res/values-ru/: strings.xml
feature/settings/src/main/res/values-zh/: strings.xml
feature/sftp/: build.gradle.kts
feature/sftp/src/main/res/values-ar/: strings.xml
feature/sftp/src/main/res/values-bn/: strings.xml
feature/terminal/: build.gradle.kts
gradle/: libs.versions.toml  verification-metadata.xml
integration-tests/: build.gradle.kts
rclone-android/go/: go.mod  go.sum
rdp-kotlin/kotlin/sh/haven/rdp/: rdp_transport.kt
rdp-kotlin/rust/: Cargo.toml  rust-toolchain.toml
rdp-kotlin/rust/src/: lib.rs  redirection.rs
rdp-kotlin/rust/src/egfx/: mod.rs
scratch/: c0probe  c0probe.c  c1probe  c1probe.c  subprobe.c
scripts/: check-changelog.sh  check-i18n-hardcoded.sh  gen-fastlane-changelog.sh  r8-must-keep-classes.txt
spice-kotlin/: .gitignore  build.gradle.kts  settings.gradle.kts
spice-kotlin/rust/: Cargo.toml  build.rs  rust-toolchain.toml  uniffi.toml
spice-kotlin/rust/src/: lib.rs
spice-kotlin/tools/: build-android.sh
(+277 files in other folders)
