[package]
name = "rdp-transport"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "rdp_transport"

[dependencies]
ironrdp-blocking = "0.8"
ironrdp-connector = "0.8"
ironrdp-session = "0.8"
ironrdp-input = "0.5"
ironrdp-cliprdr = "0.5"
ironrdp-graphics = "0.7"
ironrdp-tls = { version = "0.2", features = ["rustls"] }
ironrdp-pdu = "0.7"
ironrdp-dvc = "0.5"
ironrdp-svc = "0.6"
ironrdp-core = "0.1"
x509-cert = { version = "0.2", default-features = false }
smallvec = "1"
log = "0.4"
android_logger = "0.15"
uniffi = { version = "0.28", features = ["cli"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

# Host-side smoke driver for the same RdpClient the Kotlin AAR uses.
# Lets us iterate on the protocol without rebuilding the AAR + redeploying
# to the device. Linux/macOS only — depends on env_logger for log output.
[[bin]]
name = "rdp-cli"
path = "src/bin/rdp-cli.rs"
required-features = ["host-cli"]

[[bin]]
name = "clear-trace"
path = "src/bin/clear-trace.rs"
required-features = ["host-cli"]

# Decode an EGFX_PDU_DUMP_DIR capture and print a one-line summary per
# file. Use as a triage step on captures before sending them upstream
# (e.g. to Devolutions/IronRDP#1238).
[[bin]]
name = "replay-egfx-pdu"
path = "src/bin/replay-egfx-pdu.rs"
required-features = ["host-cli"]

[features]
default = []
host-cli = ["env_logger"]

[dependencies.env_logger]
version = "0.11"
optional = true

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }

# Local fork of ironrdp-connector with one Haven-specific patch:
# advertise SUPPORT_DYN_VC_GFX_PROTOCOL (0x0100) in the Client Core Data so
# servers open the EGFX dynamic virtual channel. Upstream rejects an unconditional
# default; we may upstream a Config flag once the integration stabilises.
[patch.crates-io]
ironrdp-connector = { path = "vendor/ironrdp-connector" }

[profile.release]
opt-level = "z"
lto = true
# NB: strip removes UniFFI metadata symbols needed by uniffi-bindgen.
# build-android.sh uses a debug host build for bindgen to work around this.
strip = true
codegen-units = 1
panic = "abort"
