[package]
name = "rdp-transport"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "rdp_transport"

[dependencies]
ironrdp-blocking = "0.9"
ironrdp-connector = "0.9"
ironrdp-session = "0.10"
ironrdp-input = "0.6"
ironrdp-cliprdr = "0.6"
ironrdp-graphics = "0.8"
ironrdp-tls = { version = "0.2", features = ["rustls"] }
ironrdp-pdu = "0.8"
ironrdp-dvc = "0.7"
ironrdp-displaycontrol = "0.7"
ironrdp-svc = "0.7"
ironrdp-core = "0.2"
ironrdp-egfx = "0.2"
x509-cert = { version = "0.2", default-features = false }
smallvec = "1"
log = "0.4"
android_logger = "0.15"
# uniffi 0.32's cargo_metadata dep would pull cargo-platform 0.3.3, which needs
# rustc 1.91 — but rust-toolchain.toml pins 1.89 for reproducible .so builds.
# Cargo.lock therefore pins cargo-platform to 0.3.2 (the last patch that builds
# on 1.89). If you `cargo update` and hit "cargo-platform@0.3.3 requires rustc
# 1.91", re-pin with `cargo update -p cargo-platform --precise 0.3.2` (or raise
# the toolchain to 1.91 and drop this note).
uniffi = { version = "0.32", features = ["cli"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
sha2 = "0.11"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

# Host-side smoke driver for the same RdpClient the Kotlin AAR uses.
# Lets us iterate on the protocol without rebuilding the AAR + redeploying
# to the device. Linux/macOS only — depends on env_logger for log output.
[[bin]]
name = "rdp-cli"
path = "src/bin/rdp-cli.rs"
required-features = ["host-cli"]

[[bin]]
name = "clear-trace"
path = "src/bin/clear-trace.rs"
required-features = ["host-cli"]

# Decode an EGFX_PDU_DUMP_DIR capture and print a one-line summary per
# file. Use as a triage step on captures before sending them upstream
# (e.g. to Devolutions/IronRDP#1238).
[[bin]]
name = "replay-egfx-pdu"
path = "src/bin/replay-egfx-pdu.rs"
required-features = ["host-cli"]

[features]
default = []
host-cli = ["env_logger"]

[dependencies.env_logger]
version = "0.11"
optional = true

[build-dependencies]
uniffi = { version = "0.32", features = ["build"] }

# Local fork of ironrdp-connector with one Haven-specific patch:
# advertise SUPPORT_DYN_VC_GFX_PROTOCOL (0x0100) in the Client Core Data so
# servers open the EGFX dynamic virtual channel. Upstream rejects an unconditional
# default; we may upstream a Config flag once the integration stabilises.
[patch.crates-io]
ironrdp-connector = { path = "vendor/ironrdp-connector" }

[profile.release]
opt-level = "z"
lto = true
# NB: strip removes UniFFI metadata symbols needed by uniffi-bindgen.
# build-android.sh uses a debug host build for bindgen to work around this.
strip = true
codegen-units = 1
panic = "abort"
